<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="40dp"
        android:text="@string/login_notice"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@mipmap/ic_login_backup"
        android:visibility="gone"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/NewPopupTheme"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="登录后尽享好服务"
            android:textColor="#FFCCCC"
            android:textSize="22sp" />
    </androidx.appcompat.widget.Toolbar>


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/ic_acount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:src="@mipmap/ic_login_acount"
                android:scaleType="centerInside"
                app:layout_constraintTop_toTopOf="@+id/username"
                app:layout_constraintBottom_toBottomOf="@+id/username"
                app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_acount"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="@+id/password"
                android:src="@mipmap/ic_login_password"
                app:layout_constraintTop_toTopOf="@+id/password"
                app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_password"
                app:layout_constraintTop_toBottomOf="@+id/username" />
            <!--    -->

            <CheckBox
                android:id="@+id/remember_uandp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleY="0.6"
                android:scaleX="0.6"
                android:layout_marginTop="20dp"
                android:buttonTint="#03A9F4"
                android:checked="true"
                android:text="@string/checkbox_rembemer"
                android:textColorHint="#C6CADC"
                android:textSize="23dp"
                android:button="@drawable/login_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/btn_login_login"
                android:layout_marginStart="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:enabled="false"
                android:textColor="#ffffff"
                android:text="@string/action_sign_in"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remember_uandp"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_notice"
                app:layout_constraintStart_toStartOf="@+id/login"
                app:layout_constraintEnd_toEndOf="@+id/login"
                app:layout_constraintTop_toBottomOf="@+id/login"
                app:layout_constraintBottom_toTopOf="@+id/register"/>

            <Button
                android:id="@+id/register"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:enabled="true"
                android:background="@drawable/btn_login_register"
                android:text="@string/action_register_finished"
                android:textColor="#ffffff"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login"
                app:layout_constraintVertical_bias="0.2" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/login_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>